parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOTDOT
    ERROR

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> PROGRAM ID SEMICOLON CORPO
Rule 2     CORPO -> DECLARACOES BEGIN LISTA_COM END
Rule 3     CORPO -> BEGIN LISTA_COM END
Rule 4     DECLARACOES -> DEF_CONST DEF_TIPOS DEF_VAR LISTA_FUNC
Rule 5     DECLARACOES -> empty
Rule 6     DEF_CONST -> CONST LISTA_CONST
Rule 7     DEF_CONST -> empty
Rule 8     LISTA_CONST -> CONSTANTE SEMICOLON LISTA_CONST
Rule 9     LISTA_CONST -> CONSTANTE SEMICOLON
Rule 10    LISTA_CONST -> empty
Rule 11    CONSTANTE -> ID ASSIGN CONST_VALOR SEMICOLON
Rule 12    CONST_VALOR -> STRING
Rule 13    CONST_VALOR -> EXP_MAT
Rule 14    DEF_TIPOS -> TYPE LISTA_TIPOS
Rule 15    DEF_TIPOS -> empty
Rule 16    LISTA_TIPOS -> TIPO SEMICOLON LISTA_TIPOS
Rule 17    LISTA_TIPOS -> TIPO SEMICOLON
Rule 18    LISTA_TIPOS -> empty
Rule 19    TIPO -> ID ASSIGN TIPO_DADO
Rule 20    TIPO_DADO -> INTEGER
Rule 21    TIPO_DADO -> REAL
Rule 22    TIPO_DADO -> ARRAY LBRACKET NUM_INT RBRACKET OF TIPO_DADO
Rule 23    TIPO_DADO -> RECORD LISTA_VAR END
Rule 24    TIPO_DADO -> ID
Rule 25    DEF_VAR -> VAR LISTA_VAR
Rule 26    DEF_VAR -> empty
Rule 27    LISTA_VAR -> VARIAVEL SEMICOLON LISTA_VAR
Rule 28    LISTA_VAR -> VARIAVEL SEMICOLON
Rule 29    LISTA_VAR -> empty
Rule 30    VARIAVEL -> LISTA_ID COLON TIPO_DADO
Rule 31    LISTA_ID -> ID COMMA LISTA_ID
Rule 32    LISTA_ID -> ID
Rule 33    LISTA_ID -> empty
Rule 34    LISTA_FUNC -> FUNCAO LISTA_FUNC
Rule 35    LISTA_FUNC -> empty
Rule 36    FUNCAO -> FUNCTION ID LPAREN PARAM_FORM RPAREN COLON TIPO_DADO BLOCO_FUNCAO
Rule 37    FUNCAO -> FUNCTION ID LPAREN RPAREN COLON TIPO_DADO BLOCO_FUNCAO
Rule 38    PARAM_FORM -> PARAM COMMA PARAM_FORM
Rule 39    PARAM_FORM -> PARAM
Rule 40    PARAM_FORM -> empty
Rule 41    PARAM -> LISTA_ID COLON TIPO_DADO
Rule 42    BLOCO_FUNCAO -> DEF_VAR BLOCO
Rule 43    BLOCO_FUNCAO -> BLOCO
Rule 44    BLOCO -> BEGIN LISTA_COM END
Rule 45    BLOCO -> COMANDO
Rule 46    LISTA_COM -> COMANDO SEMICOLON LISTA_COM
Rule 47    LISTA_COM -> COMANDO SEMICOLON
Rule 48    LISTA_COM -> empty
Rule 49    COMANDO -> NOME ASSIGN VALOR
Rule 50    COMANDO -> WHILE EXP_LOGICA BLOCO
Rule 51    COMANDO -> IF EXP_LOGICA THEN BLOCO ELSE_OPT
Rule 52    COMANDO -> WRITE LPAREN EXP_MAT RPAREN
Rule 53    COMANDO -> WRITE LPAREN STRING RPAREN
Rule 54    COMANDO -> READ LPAREN NOME RPAREN
Rule 55    COMANDO -> BLOCO
Rule 56    ELSE_OPT -> ELSE BLOCO
Rule 57    ELSE_OPT -> empty
Rule 58    VALOR -> EXP_MAT
Rule 59    VALOR -> ID LISTA_ARG
Rule 60    LISTA_ARG -> LPAREN LISTA_EXP RPAREN
Rule 61    LISTA_ARG -> LPAREN RPAREN
Rule 62    LISTA_EXP -> EXP_MAT COMMA LISTA_EXP
Rule 63    LISTA_EXP -> EXP_MAT
Rule 64    LISTA_EXP -> empty
Rule 65    EXP_LOGICA -> EXP_REL
Rule 66    EXP_REL -> EXP_MAT OP_REL EXP_MAT
Rule 67    EXP_REL -> EXP_MAT
Rule 68    OP_REL -> EQUALS
Rule 69    OP_REL -> DIFF
Rule 70    OP_REL -> LT
Rule 71    OP_REL -> LE
Rule 72    OP_REL -> GT
Rule 73    OP_REL -> GE
Rule 74    EXP_MAT -> TERMO PLUS EXP_MAT
Rule 75    EXP_MAT -> TERMO MINUS EXP_MAT
Rule 76    EXP_MAT -> TERMO
Rule 77    TERMO -> FATOR TIMES TERMO
Rule 78    TERMO -> FATOR DIVIDE TERMO
Rule 79    TERMO -> FATOR
Rule 80    FATOR -> PARAMETRO
Rule 81    FATOR -> LPAREN EXP_MAT RPAREN
Rule 82    PARAMETRO -> NOME
Rule 83    PARAMETRO -> NUM_INT
Rule 84    PARAMETRO -> NUM_REAL
Rule 85    NOME -> ID NOME_CONT
Rule 86    NOME -> ID
Rule 87    NOME_CONT -> DOT ID NOME_CONT
Rule 88    NOME_CONT -> LBRACKET EXP_MAT RBRACKET
Rule 89    NOME_CONT -> empty
Rule 90    empty -> <empty>

Terminals, with rules where they appear

ARRAY                : 22
ASSIGN               : 11 19 49
BEGIN                : 2 3 44
COLON                : 30 36 37 41
COMMA                : 31 38 62
CONST                : 6
DIFF                 : 69
DIVIDE               : 78
DOT                  : 87
DOTDOT               : 
ELSE                 : 56
END                  : 2 3 23 44
EQUALS               : 68
ERROR                : 
FUNCTION             : 36 37
GE                   : 73
GT                   : 72
ID                   : 1 11 19 24 31 32 36 37 59 85 86 87
IF                   : 51
INTEGER              : 20
LBRACKET             : 22 88
LE                   : 71
LPAREN               : 36 37 52 53 54 60 61 81
LT                   : 70
MINUS                : 75
NUM_INT              : 22 83
NUM_REAL             : 84
OF                   : 22
PLUS                 : 74
PROGRAM              : 1
RBRACKET             : 22 88
READ                 : 54
REAL                 : 21
RECORD               : 23
RPAREN               : 36 37 52 53 54 60 61 81
SEMICOLON            : 1 8 9 11 16 17 27 28 46 47
STRING               : 12 53
THEN                 : 51
TIMES                : 77
TYPE                 : 14
VAR                  : 25
WHILE                : 50
WRITE                : 52 53
error                : 

Nonterminals, with rules where they appear

BLOCO                : 42 43 50 51 55 56
BLOCO_FUNCAO         : 36 37
COMANDO              : 45 46 47
CONSTANTE            : 8 9
CONST_VALOR          : 11
CORPO                : 1
DECLARACOES          : 2
DEF_CONST            : 4
DEF_TIPOS            : 4
DEF_VAR              : 4 42
ELSE_OPT             : 51
EXP_LOGICA           : 50 51
EXP_MAT              : 13 52 58 62 63 66 66 67 74 75 81 88
EXP_REL              : 65
FATOR                : 77 78 79
FUNCAO               : 34
LISTA_ARG            : 59
LISTA_COM            : 2 3 44 46
LISTA_CONST          : 6 8
LISTA_EXP            : 60 62
LISTA_FUNC           : 4 34
LISTA_ID             : 30 31 41
LISTA_TIPOS          : 14 16
LISTA_VAR            : 23 25 27
NOME                 : 49 54 82
NOME_CONT            : 85 87
OP_REL               : 66
PARAM                : 38 39
PARAMETRO            : 80
PARAM_FORM           : 36 38
PROGRAMA             : 0
TERMO                : 74 75 76 77 78
TIPO                 : 16 17
TIPO_DADO            : 19 22 30 36 37 41
VALOR                : 49
VARIAVEL             : 27 28
empty                : 5 7 10 15 18 26 29 33 35 40 48 57 64 89

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . PROGRAM ID SEMICOLON CORPO

    PROGRAM         shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> PROGRAM . ID SEMICOLON CORPO

    ID              shift and go to state 3


state 3

    (1) PROGRAMA -> PROGRAM ID . SEMICOLON CORPO

    SEMICOLON       shift and go to state 4


state 4

    (1) PROGRAMA -> PROGRAM ID SEMICOLON . CORPO
    (2) CORPO -> . DECLARACOES BEGIN LISTA_COM END
    (3) CORPO -> . BEGIN LISTA_COM END
    (4) DECLARACOES -> . DEF_CONST DEF_TIPOS DEF_VAR LISTA_FUNC
    (5) DECLARACOES -> . empty
    (6) DEF_CONST -> . CONST LISTA_CONST
    (7) DEF_CONST -> . empty
    (90) empty -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    BEGIN           shift and go to state 7
    CONST           shift and go to state 10
    TYPE            reduce using rule 90 (empty -> .)
    VAR             reduce using rule 90 (empty -> .)
    FUNCTION        reduce using rule 90 (empty -> .)

  ! BEGIN           [ reduce using rule 90 (empty -> .) ]

    CORPO                          shift and go to state 5
    DECLARACOES                    shift and go to state 6
    DEF_CONST                      shift and go to state 8
    empty                          shift and go to state 9

state 5

    (1) PROGRAMA -> PROGRAM ID SEMICOLON CORPO .

    $end            reduce using rule 1 (PROGRAMA -> PROGRAM ID SEMICOLON CORPO .)


state 6

    (2) CORPO -> DECLARACOES . BEGIN LISTA_COM END

    BEGIN           shift and go to state 11


state 7

    (3) CORPO -> BEGIN . LISTA_COM END
    (46) LISTA_COM -> . COMANDO SEMICOLON LISTA_COM
    (47) LISTA_COM -> . COMANDO SEMICOLON
    (48) LISTA_COM -> . empty
    (49) COMANDO -> . NOME ASSIGN VALOR
    (50) COMANDO -> . WHILE EXP_LOGICA BLOCO
    (51) COMANDO -> . IF EXP_LOGICA THEN BLOCO ELSE_OPT
    (52) COMANDO -> . WRITE LPAREN EXP_MAT RPAREN
    (53) COMANDO -> . WRITE LPAREN STRING RPAREN
    (54) COMANDO -> . READ LPAREN NOME RPAREN
    (55) COMANDO -> . BLOCO
    (90) empty -> .
    (85) NOME -> . ID NOME_CONT
    (86) NOME -> . ID
    (44) BLOCO -> . BEGIN LISTA_COM END
    (45) BLOCO -> . COMANDO

    WHILE           shift and go to state 17
    IF              shift and go to state 19
    WRITE           shift and go to state 20
    READ            shift and go to state 21
    END             reduce using rule 90 (empty -> .)
    ID              shift and go to state 22
    BEGIN           shift and go to state 12

    LISTA_COM                      shift and go to state 13
    COMANDO                        shift and go to state 14
    empty                          shift and go to state 15
    NOME                           shift and go to state 16
    BLOCO                          shift and go to state 18

state 8

    (4) DECLARACOES -> DEF_CONST . DEF_TIPOS DEF_VAR LISTA_FUNC
    (14) DEF_TIPOS -> . TYPE LISTA_TIPOS
    (15) DEF_TIPOS -> . empty
    (90) empty -> .

    TYPE            shift and go to state 24
    VAR             reduce using rule 90 (empty -> .)
    FUNCTION        reduce using rule 90 (empty -> .)
    BEGIN           reduce using rule 90 (empty -> .)

    DEF_TIPOS                      shift and go to state 23
    empty                          shift and go to state 25

state 9

    (5) DECLARACOES -> empty .
    (7) DEF_CONST -> empty .

  ! reduce/reduce conflict for BEGIN resolved using rule 5 (DECLARACOES -> empty .)
    BEGIN           reduce using rule 5 (DECLARACOES -> empty .)
    TYPE            reduce using rule 7 (DEF_CONST -> empty .)
    VAR             reduce using rule 7 (DEF_CONST -> empty .)
    FUNCTION        reduce using rule 7 (DEF_CONST -> empty .)

  ! BEGIN           [ reduce using rule 7 (DEF_CONST -> empty .) ]


state 10

    (6) DEF_CONST -> CONST . LISTA_CONST
    (8) LISTA_CONST -> . CONSTANTE SEMICOLON LISTA_CONST
    (9) LISTA_CONST -> . CONSTANTE SEMICOLON
    (10) LISTA_CONST -> . empty
    (11) CONSTANTE -> . ID ASSIGN CONST_VALOR SEMICOLON
    (90) empty -> .

    ID              shift and go to state 29
    TYPE            reduce using rule 90 (empty -> .)
    VAR             reduce using rule 90 (empty -> .)
    FUNCTION        reduce using rule 90 (empty -> .)
    BEGIN           reduce using rule 90 (empty -> .)

    LISTA_CONST                    shift and go to state 26
    CONSTANTE                      shift and go to state 27
    empty                          shift and go to state 28

state 11

    (2) CORPO -> DECLARACOES BEGIN . LISTA_COM END
    (46) LISTA_COM -> . COMANDO SEMICOLON LISTA_COM
    (47) LISTA_COM -> . COMANDO SEMICOLON
    (48) LISTA_COM -> . empty
    (49) COMANDO -> . NOME ASSIGN VALOR
    (50) COMANDO -> . WHILE EXP_LOGICA BLOCO
    (51) COMANDO -> . IF EXP_LOGICA THEN BLOCO ELSE_OPT
    (52) COMANDO -> . WRITE LPAREN EXP_MAT RPAREN
    (53) COMANDO -> . WRITE LPAREN STRING RPAREN
    (54) COMANDO -> . READ LPAREN NOME RPAREN
    (55) COMANDO -> . BLOCO
    (90) empty -> .
    (85) NOME -> . ID NOME_CONT
    (86) NOME -> . ID
    (44) BLOCO -> . BEGIN LISTA_COM END
    (45) BLOCO -> . COMANDO

    WHILE           shift and go to state 17
    IF              shift and go to state 19
    WRITE           shift and go to state 20
    READ            shift and go to state 21
    END             reduce using rule 90 (empty -> .)
    ID              shift and go to state 22
    BEGIN           shift and go to state 12

    LISTA_COM                      shift and go to state 30
    COMANDO                        shift and go to state 14
    empty                          shift and go to state 15
    NOME                           shift and go to state 16
    BLOCO                          shift and go to state 18

state 12

    (44) BLOCO -> BEGIN . LISTA_COM END
    (46) LISTA_COM -> . COMANDO SEMICOLON LISTA_COM
    (47) LISTA_COM -> . COMANDO SEMICOLON
    (48) LISTA_COM -> . empty
    (49) COMANDO -> . NOME ASSIGN VALOR
    (50) COMANDO -> . WHILE EXP_LOGICA BLOCO
    (51) COMANDO -> . IF EXP_LOGICA THEN BLOCO ELSE_OPT
    (52) COMANDO -> . WRITE LPAREN EXP_MAT RPAREN
    (53) COMANDO -> . WRITE LPAREN STRING RPAREN
    (54) COMANDO -> . READ LPAREN NOME RPAREN
    (55) COMANDO -> . BLOCO
    (90) empty -> .
    (85) NOME -> . ID NOME_CONT
    (86) NOME -> . ID
    (44) BLOCO -> . BEGIN LISTA_COM END
    (45) BLOCO -> . COMANDO

    WHILE           shift and go to state 17
    IF              shift and go to state 19
    WRITE           shift and go to state 20
    READ            shift and go to state 21
    END             reduce using rule 90 (empty -> .)
    ID              shift and go to state 22
    BEGIN           shift and go to state 12

    LISTA_COM                      shift and go to state 31
    COMANDO                        shift and go to state 14
    empty                          shift and go to state 15
    NOME                           shift and go to state 16
    BLOCO                          shift and go to state 18

state 13

    (3) CORPO -> BEGIN LISTA_COM . END

    END             shift and go to state 32


state 14

    (46) LISTA_COM -> COMANDO . SEMICOLON LISTA_COM
    (47) LISTA_COM -> COMANDO . SEMICOLON
    (45) BLOCO -> COMANDO .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 33

  ! SEMICOLON       [ reduce using rule 45 (BLOCO -> COMANDO .) ]


state 15

    (48) LISTA_COM -> empty .

    END             reduce using rule 48 (LISTA_COM -> empty .)


state 16

    (49) COMANDO -> NOME . ASSIGN VALOR

    ASSIGN          shift and go to state 34


state 17

    (50) COMANDO -> WHILE . EXP_LOGICA BLOCO
    (65) EXP_LOGICA -> . EXP_REL
    (66) EXP_REL -> . EXP_MAT OP_REL EXP_MAT
    (67) EXP_REL -> . EXP_MAT
    (74) EXP_MAT -> . TERMO PLUS EXP_MAT
    (75) EXP_MAT -> . TERMO MINUS EXP_MAT
    (76) EXP_MAT -> . TERMO
    (77) TERMO -> . FATOR TIMES TERMO
    (78) TERMO -> . FATOR DIVIDE TERMO
    (79) TERMO -> . FATOR
    (80) FATOR -> . PARAMETRO
    (81) FATOR -> . LPAREN EXP_MAT RPAREN
    (82) PARAMETRO -> . NOME
    (83) PARAMETRO -> . NUM_INT
    (84) PARAMETRO -> . NUM_REAL
    (85) NOME -> . ID NOME_CONT
    (86) NOME -> . ID

    LPAREN          shift and go to state 41
    NUM_INT         shift and go to state 43
    NUM_REAL        shift and go to state 44
    ID              shift and go to state 22

    EXP_LOGICA                     shift and go to state 35
    EXP_REL                        shift and go to state 36
    EXP_MAT                        shift and go to state 37
    TERMO                          shift and go to state 38
    FATOR                          shift and go to state 39
    PARAMETRO                      shift and go to state 40
    NOME                           shift and go to state 42

state 18

    (55) COMANDO -> BLOCO .

    SEMICOLON       reduce using rule 55 (COMANDO -> BLOCO .)


state 19

    (51) COMANDO -> IF . EXP_LOGICA THEN BLOCO ELSE_OPT
    (65) EXP_LOGICA -> . EXP_REL
    (66) EXP_REL -> . EXP_MAT OP_REL EXP_MAT
    (67) EXP_REL -> . EXP_MAT
    (74) EXP_MAT -> . TERMO PLUS EXP_MAT
    (75) EXP_MAT -> . TERMO MINUS EXP_MAT
    (76) EXP_MAT -> . TERMO
    (77) TERMO -> . FATOR TIMES TERMO
    (78) TERMO -> . FATOR DIVIDE TERMO
    (79) TERMO -> . FATOR
    (80) FATOR -> . PARAMETRO
    (81) FATOR -> . LPAREN EXP_MAT RPAREN
    (82) PARAMETRO -> . NOME
    (83) PARAMETRO -> . NUM_INT
    (84) PARAMETRO -> . NUM_REAL
    (85) NOME -> . ID NOME_CONT
    (86) NOME -> . ID

    LPAREN          shift and go to state 41
    NUM_INT         shift and go to state 43
    NUM_REAL        shift and go to state 44
    ID              shift and go to state 22

    EXP_LOGICA                     shift and go to state 45
    EXP_REL                        shift and go to state 36
    EXP_MAT                        shift and go to state 37
    TERMO                          shift and go to state 38
    FATOR                          shift and go to state 39
    PARAMETRO                      shift and go to state 40
    NOME                           shift and go to state 42

state 20

    (52) COMANDO -> WRITE . LPAREN EXP_MAT RPAREN
    (53) COMANDO -> WRITE . LPAREN STRING RPAREN

    LPAREN          shift and go to state 46


state 21

    (54) COMANDO -> READ . LPAREN NOME RPAREN

    LPAREN          shift and go to state 47


state 22

    (85) NOME -> ID . NOME_CONT
    (86) NOME -> ID .
    (87) NOME_CONT -> . DOT ID NOME_CONT
    (88) NOME_CONT -> . LBRACKET EXP_MAT RBRACKET
    (89) NOME_CONT -> . empty
    (90) empty -> .

  ! reduce/reduce conflict for ASSIGN resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for TIMES resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for PLUS resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for MINUS resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for EQUALS resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for DIFF resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for LT resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for LE resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for GT resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for GE resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for BEGIN resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for WHILE resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for IF resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for WRITE resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for READ resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for ID resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for THEN resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for RPAREN resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for ELSE resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 86 (NOME -> ID .)
  ! reduce/reduce conflict for COMMA resolved using rule 86 (NOME -> ID .)
    ASSIGN          reduce using rule 86 (NOME -> ID .)
    TIMES           reduce using rule 86 (NOME -> ID .)
    DIVIDE          reduce using rule 86 (NOME -> ID .)
    PLUS            reduce using rule 86 (NOME -> ID .)
    MINUS           reduce using rule 86 (NOME -> ID .)
    EQUALS          reduce using rule 86 (NOME -> ID .)
    DIFF            reduce using rule 86 (NOME -> ID .)
    LT              reduce using rule 86 (NOME -> ID .)
    LE              reduce using rule 86 (NOME -> ID .)
    GT              reduce using rule 86 (NOME -> ID .)
    GE              reduce using rule 86 (NOME -> ID .)
    BEGIN           reduce using rule 86 (NOME -> ID .)
    WHILE           reduce using rule 86 (NOME -> ID .)
    IF              reduce using rule 86 (NOME -> ID .)
    WRITE           reduce using rule 86 (NOME -> ID .)
    READ            reduce using rule 86 (NOME -> ID .)
    ID              reduce using rule 86 (NOME -> ID .)
    THEN            reduce using rule 86 (NOME -> ID .)
    RPAREN          reduce using rule 86 (NOME -> ID .)
    RBRACKET        reduce using rule 86 (NOME -> ID .)
    SEMICOLON       reduce using rule 86 (NOME -> ID .)
    ELSE            reduce using rule 86 (NOME -> ID .)
    FUNCTION        reduce using rule 86 (NOME -> ID .)
    COMMA           reduce using rule 86 (NOME -> ID .)
    DOT             shift and go to state 49
    LBRACKET        shift and go to state 50
